--- a/public/release-notes.html
+++ b/public/release-notes.html
@@ -9,6 +9,8 @@
   <title>Release Notes</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
 
     @font-face {
@@ -70,6 +72,36 @@
         font-size: 18px !important;
         }
     }
+
+    /* new */
+
+    html {
+      scroll-behavior: smooth;
+    }
+    .banner-img {
+      max-height: 100px;
+      object-fit: contain;
+    }
+    .developer-img {
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+    .sidebar a {
+      display: block;
+      padding: 0.5rem 1rem;
+      color: #000;
+      text-decoration: none;
+    }
+    .sidebar a:hover {
+      background-color: #e9ecef;
+    }
+    @media (min-width: 768px) {
+      .mobile-sidebar-toggle {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -92,7 +124,7 @@
           It is maintained regularly by the developer to keep users informed about the progress of the system, newly added functionalities, resolved issues, and any other technical changes implemented as part of the ongoing development and maintenance process. <br><br>
           The developer ensures that the system is continuously improving, addressing bugs, and implementing user suggestions to enhance functionality and user experience.
         </p>
-  
+
         <div class="developer d-flex align-items-center mt-4">
           <img src="./assets/developer.png" alt="Developer Photo" class="rounded-circle me-3" style="width: 60px; height: 60px;">
           <div>
@@ -103,16 +135,48 @@
       </div>
     </div>
   </div>
-  
+
+  <div class="new-release-notes">
+    <!-- Sidebar Toggle Button (Mobile Only) -->
+    <div class="container mt-3 d-md-none text-end">
+        <button class="btn btn-outline-success mobile-sidebar-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarCollapse" aria-expanded="false" aria-controls="sidebarCollapse">
+        ☰ Versions
+        </button>
+    </div>
+
+    <!-- Layout with Sidebar -->
+    <div class="container">
+        <div class="row">
+
+        <!-- Collapsible Sidebar -->
+        <nav class="col-md-3 col-lg-2 collapse d-md-block bg-light sidebar py-4" id="sidebarCollapse">
+            <h5 class="px-3">Versions</h5>
+            <div id="version-links" class="px-2">
+            <!-- Dynamic version links go here -->
+            </div>
+        </nav>
+
+        <!-- Main Content -->
+        <main class="col-md-9 col-lg-10 py-4" id="release-notes-container">
+            <!-- Dynamic release notes will be injected here -->
+        </main>
+        </div>
+    </div>
+  </div>
+
   </div>
 
   <main class="container py-4">
+
+
+
+  <div><h1>Older Versions</h1></div>
 
     <div class="row g-4 mt-3">
       <div class="col-12 col-md-12 col-lg-12">
         <div class="card h-100">
           <div class="card-body">
-            <h1 class="card-title fw-bold">Version 1.0.4 - Latest</h1>
+            <h1 class="card-title fw-bold">Version 1.0.4</h1>
             <h6 class="card-subtitle mb-2 text-muted">Release Date: April 30, 2025 - <a href="https://app.librifyits.com">https://app.librifyits.com</a></h6>
             <h6 class="card-subtitle mb-2 text-muted">Release By: Mark Jason Espelita - IT Programmer</h6>
             <hr>
@@ -280,6 +344,67 @@
 
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- JavaScript to Fetch GitHub Releases -->
+  <script>
+    const container = $('#release-notes-container');
+    const versionLinks = $('#version-links');
+
+    $.get('https://api.github.com/repos/mjespelita/librify-app/releases', function(data) {
+      data.forEach((release, index) => {
+        const id = `release-${index}`;
+        const authorName = release.author?.login || 'Unknown Author';
+        const authorAvatar = release.author?.avatar_url || '';
+        const releaseDate = new Date(release.published_at).toLocaleString();
+        const bodyItems = (release.body || '')
+          .split(/\r?\n/)
+          .filter(line => line.trim().startsWith('*'))
+          .map(line => line.replace(/^\*\s*/, ''));
+
+        versionLinks.append(`<a href="#${id}" class="version-link">Version ${release.tag_name}</a>`);
+
+        const card = $(`
+          <div class="card mb-4 shadow-sm" id="${id}">
+            <div class="card-body">
+              <h3 class="card-title fw-bold">Version ${release.tag_name}</h3>
+              <h6 class="card-subtitle text-muted mb-2">
+                Release Date: ${releaseDate} |
+                <a href="${release.html_url}" target="_blank">${release.html_url}</a>
+              </h6>
+              <div class="d-flex align-items-center mb-3">
+                <img src="${authorAvatar}" class="developer-img me-2" alt="Author"/>
+                <span class="text-muted">Released by: ${authorName}</span>
+              </div>
+              <h5>${release.name}</h5>
+              <ul>
+                ${bodyItems.map(item => `<li>${item}</li>`).join('')}
+              </ul>
+            </div>
+          </div>
+        `);
+
+        container.append(card);
+      });
+    });
+
+    // Smooth scroll on version links
+    $(document).on('click', '.version-link', function(e) {
+      e.preventDefault();
+      const target = $($(this).attr('href'));
+      if (target.length) {
+        $('html, body').animate({
+          scrollTop: target.offset().top - 20
+        }, 500);
+
+        // Collapse sidebar on small screens
+        if (window.innerWidth < 768) {
+          const sidebar = bootstrap.Collapse.getInstance(document.getElementById('sidebarCollapse'));
+          if (sidebar) sidebar.hide();
+        }
+      }
+    });
+  </script>
+
+  <!-- Bootstrap JS (Required for collapse) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
