--- a/public/release-notes.html
+++ b/public/release-notes.html
@@ -204,7 +204,7 @@
       <div class="col-12 col-md-12 col-lg-12">
         <div class="card h-100">
           <div class="card-body">
-            <h1 class="card-title fw-bold">Version 1.0.3 - Latest</h1>
+            <h1 class="card-title fw-bold">Version 1.0.3</h1>
             <h6 class="card-subtitle mb-2 text-muted">Release Date: April 26, 2025 - <a href="https://app.librifyits.com">https://app.librifyits.com</a></h6>
             <h6 class="card-subtitle mb-2 text-muted">Release By: Mark Jason Espelita - IT Programmer</h6>
             <hr>
